# ChangeLog for dev-ruby/rubylibcrack
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header$

*rubylibcrack-0.1.1 (14 Apr 2010)

  14 Apr 2010; Hans de Graaff <graaff@gentoo.org>
  +rubylibcrack-0.1.1.ebuild, +metadata.xml:
  Initial import.
