@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rubylibcrack
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header$
+
+*rubylibcrack-0.2.2 (25 Jan 2011)
+
+  25 Jan 2011; Hans de Graaff <graaff@gentoo.org>
+  +rubylibcrack-0.2.2.ebuild:
+  Version bump.
 
 *rubylibcrack-0.1.1 (14 Apr 2010)
 
